crates/peach_app/src/snapshots/peach_app__operation__tests__fs_patch_basic.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<file_diff
  path="/home/user/test.txt"
  total_lines="2"
><![CDATA[1   |-Hello world
  1 |+Hello universe
2 2 | This is a test
]]>
</file_diff>
