crates/peach_app/src/snapshots/peach_app__operation__tests__fs_patch_with_warning_special_chars.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<file_diff
  path="/home/user/test.zsh"
  total_lines="3"
><![CDATA[1 1 | line1
  2 |+new line
2 3 | line2
]]>
<warning>
<message>Syntax validation failed</message>
<file
  path="/home/user/test.zsh"
>
</file>
<details>The file was written successfully but contains 3 syntax error(s)</details>
<error
  line="22"
  column="1"
><![CDATA[Syntax error at 'function dim() { echo "${_DIM}${1}${RESET}"']]>
</error>
<error
  line="25"
  column="5"
><![CDATA[Unexpected token]]>
</error>
<error
  line="30"
  column="10"
><![CDATA[Missing closing brace]]>
</error>
<suggestion>Review and fix the syntax issues</suggestion>
</warning>
</file_diff>
