crates/peach_app/src/snapshots/peach_app__operation__tests__fs_read_basic.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<file
  path="/home/user/test.txt"
  display_lines="1-2"
  total_lines="2"
><![CDATA[1:Hello, world!
2:This is a test file.]]>
</file>
